[gd_scene load_steps=18 format=3 uid="uid://dh6m6hocwypc0"]

[ext_resource type="PackedScene" uid="uid://edy4bdnknf5d" path="res://Assets/Enemies/Rasta/rasta.glb" id="1_5wq2a"]
[ext_resource type="Script" path="res://Scenes/Characters/Enemies/Rasta/enemy_rasta.gd" id="1_ecqye"]
[ext_resource type="PackedScene" uid="uid://doyksevus16f" path="res://Scenes/Characters/StateMachine/state_machine.tscn" id="2_sbgte"]
[ext_resource type="PackedScene" uid="uid://cv3c47mjv611c" path="res://Scenes/Components/take_damage_enemy.tscn" id="3_6e6hn"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/idle.gd" id="3_jq5xo"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/attack.gd" id="4_wq2o6"]
[ext_resource type="PackedScene" uid="uid://b6bek0ab6i4wg" path="res://Scenes/Components/player_detector.tscn" id="4_xct1x"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/dead.gd" id="5_ief7n"]
[ext_resource type="PackedScene" uid="uid://825qsxmttfxw" path="res://Scenes/Components/enemy_attacker.tscn" id="5_yvppe"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/fall_idle.gd" id="6_4ls7k"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/landing.gd" id="7_jktti"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/take_damage.gd" id="8_ybyyf"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/chase.gd" id="13_m24yl"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lj8q5"]
radius = 0.705

[sub_resource type="BoxShape3D" id="BoxShape3D_w5d84"]
size = Vector3(10, 1.5, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_hlr2b"]
size = Vector3(0.20752, 0.289063, 0.528198)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ecylj"]

[node name="EnemyRasta" type="CharacterBody3D"]
script = ExtResource("1_ecqye")

[node name="visual" type="Node3D" parent="."]

[node name="Enemy" parent="visual" instance=ExtResource("1_5wq2a")]

[node name="Skeleton3D" parent="visual/Enemy/Armature_006" index="0"]
bones/0/position = Vector3(-0.985211, 2.27841, -60.7809)
bones/0/rotation = Quaternion(-0.669012, -0.259655, 0.294694, 0.630998)
bones/1/rotation = Quaternion(0.0835529, 0.0632975, -0.0126705, 0.99441)
bones/2/rotation = Quaternion(-0.0443437, 0.00897377, -0.00761112, 0.998947)
bones/3/position = Vector3(4.76837e-07, 16.3466, 1.47039e-06)
bones/3/rotation = Quaternion(0.0627676, 0.00904924, -0.00724828, 0.997961)
bones/4/rotation = Quaternion(0.00529148, 0.114996, 0.0394186, 0.992569)
bones/5/rotation = Quaternion(0.0702424, 0.176952, -0.0217848, 0.981468)
bones/6/position = Vector3(-2.38419e-06, 21.7488, -0.0341938)
bones/9/position = Vector3(13.5, -9.77328e-06, 2.84612e-06)
bones/11/position = Vector3(11.5, 3.66931e-06, -6.27898e-06)
bones/12/position = Vector3(-10.2452, 17.4258, 1.47291)
bones/12/rotation = Quaternion(0.529719, -0.451693, 0.594433, -0.402519)
bones/13/position = Vector3(13.5004, 0.000120966, 1.20252e-05)
bones/14/rotation = Quaternion(0.442561, -0.539184, 0.592762, -0.402559)
bones/15/position = Vector3(11.5004, 2.32632e-05, 8.82754e-05)
bones/16/rotation = Quaternion(0.421844, 0.578682, -0.519637, 0.465996)
bones/17/position = Vector3(1.21461e-06, 10.2672, 9.43025e-06)
bones/17/rotation = Quaternion(0.533282, -0.39959, 0.161533, 0.727905)
bones/18/position = Vector3(3.93411e-07, 21.9469, 1.1141e-06)
bones/18/rotation = Quaternion(-6.0316e-07, 9.65547e-07, 0.800512, 0.599317)
bones/19/position = Vector3(-8.22407e-07, 33.8914, 5.64894e-06)
bones/19/rotation = Quaternion(0.138838, 0.0264318, 0.0642112, 0.987878)
bones/20/position = Vector3(-3.37029, 6.71687, 2.37172)
bones/20/rotation = Quaternion(0.246326, 0.0358509, 0.365886, 0.896753)
bones/21/position = Vector3(-1.54972e-06, 3.22353, 1.28374e-05)
bones/21/rotation = Quaternion(0.00430409, -0.0636309, -0.36991, 0.926876)
bones/22/position = Vector3(1.12057e-05, 3.76235, -1.15037e-05)
bones/22/rotation = Quaternion(-0.19531, 0.0851007, -0.125505, 0.968948)
bones/23/position = Vector3(-1.21593e-05, 4.01876, 1.54972e-06)
bones/24/position = Vector3(-3.84665, 14.1924, 0.266529)
bones/24/rotation = Quaternion(0.389019, -0.00942409, -0.0279282, 0.920758)
bones/25/position = Vector3(-4.66201e-06, 3.55173, 1.13649e-05)
bones/25/rotation = Quaternion(0.691538, 8.79924e-06, -0.0706856, 0.718874)
bones/26/position = Vector3(2.84987e-06, 2.89419, 9.89583e-07)
bones/26/rotation = Quaternion(0.428379, -3.1803e-06, -0.0437992, 0.902537)
bones/27/position = Vector3(2.38635e-06, 3.67604, 1.00067e-05)
bones/28/position = Vector3(-0.00638969, 13.7781, 0.0120564)
bones/28/rotation = Quaternion(0.339688, -0.0151713, -0.0300691, 0.939935)
bones/29/position = Vector3(-8.98517e-07, 3.43825, 4.77801e-06)
bones/29/rotation = Quaternion(0.738488, -8.13928e-06, -0.0755017, 0.670027)
bones/30/position = Vector3(2.17594e-06, 3.69157, -2.16248e-06)
bones/30/rotation = Quaternion(0.430428, 2.84081e-06, -0.0439962, 0.901552)
bones/31/position = Vector3(1.87339e-07, 4.09371, -7.03665e-06)
bones/32/position = Vector3(3.06108, 13.9677, 0.280113)
bones/32/rotation = Quaternion(0.339896, -0.0108976, -0.042053, 0.939459)
bones/33/position = Vector3(8.5712e-06, 3.16252, 1.27361e-05)
bones/33/rotation = Quaternion(0.831444, -9.91312e-06, -0.0850037, 0.549067)
bones/34/position = Vector3(9.90417e-07, 3.32438, 5.81188e-07)
bones/34/rotation = Quaternion(0.520853, 6.17395e-06, -0.0532359, 0.851985)
bones/35/position = Vector3(-2.14874e-06, 3.62239, 2.72254e-06)
bones/36/rotation = Quaternion(0.385725, -0.0605915, -0.0602144, 0.918651)
bones/37/position = Vector3(-7.27217e-06, 2.84917, 8.84896e-06)
bones/37/rotation = Quaternion(0.672283, 5.43052e-06, -0.0687203, 0.737098)
bones/38/position = Vector3(4.3152e-06, 2.80502, 7.07559e-06)
bones/38/rotation = Quaternion(0.858228, 1.88819e-07, -0.0877353, 0.505715)
bones/39/position = Vector3(2.99057e-07, 2.84901, 2.5147e-06)
bones/40/position = Vector3(-2.11905e-06, 14.4916, -0.000150473)
bones/42/position = Vector3(9.6507e-06, 6.71907, -0.000223517)
bones/44/position = Vector3(6.60904e-07, 6.71947, -2.14579e-06)
bones/45/rotation = Quaternion(-0.110048, -0.0901016, 0.989783, -0.0100175)
bones/46/position = Vector3(2.46929e-06, 7.29176, 1.19208e-06)
bones/47/rotation = Quaternion(7.25581e-08, -0.0748765, 0.997193, -3.1133e-09)
bones/48/position = Vector3(6.6469e-07, 14.2469, -2.70562e-06)
bones/50/position = Vector3(2.0504e-06, 6.1561, 9.5368e-07)
bones/51/rotation = Quaternion(0.426617, -0.552063, 0.390373, 0.600695)
bones/52/position = Vector3(-1.02256e-06, 10.2672, -8.22415e-06)
bones/52/rotation = Quaternion(0.618123, 0.163161, -0.451455, 0.622488)
bones/53/position = Vector3(1.83016e-06, 21.9469, -3.86648e-06)
bones/53/rotation = Quaternion(-3.62962e-08, 3.84275e-08, -0.798574, 0.601897)
bones/54/position = Vector3(4.60102e-06, 33.8914, 2.50966e-06)
bones/54/rotation = Quaternion(0.0643353, 0.0601674, -0.157152, 0.983638)
bones/55/position = Vector3(3.37029, 6.71691, 2.372)
bones/55/rotation = Quaternion(0.246405, -0.0282362, -0.384053, 0.889376)
bones/56/position = Vector3(8.94054e-06, 3.22338, 6.88415e-06)
bones/56/rotation = Quaternion(-0.00136312, 0.067287, 0.384881, 0.920509)
bones/57/position = Vector3(-1.10865e-05, 3.76227, -1.07283e-05)
bones/57/rotation = Quaternion(-0.19576, -0.0798586, 0.180949, 0.960499)
bones/58/position = Vector3(-7.15269e-07, 4.01899, -2.62263e-06)
bones/59/position = Vector3(3.84666, 14.1924, 0.267013)
bones/59/rotation = Quaternion(0.383503, 0.00898618, 0.0187149, 0.923306)
bones/60/position = Vector3(3.23118e-06, 3.55172, 9.63973e-09)
bones/60/rotation = Quaternion(0.692864, -9.17499e-06, 0.0562649, 0.71887)
bones/61/position = Vector3(3.47784e-06, 2.89421, -4.77585e-06)
bones/61/rotation = Quaternion(0.429199, 3.22415e-06, 0.0348663, 0.902537)
bones/62/position = Vector3(7.07095e-06, 3.67601, 1.09217e-05)
bones/63/position = Vector3(0.00639117, 13.7781, 0.0120135)
bones/63/rotation = Quaternion(0.334111, 0.0148101, 0.0218169, 0.942165)
bones/64/position = Vector3(3.49873e-06, 3.43821, -1.89146e-05)
bones/64/rotation = Quaternion(0.739904, 7.14946e-06, 0.0601018, 0.670022)
bones/65/position = Vector3(4.58568e-08, 3.69159, -1.29399e-06)
bones/65/rotation = Quaternion(0.431247, -2.38421e-06, 0.035021, 0.901554)
bones/66/position = Vector3(-1.73703e-06, 4.09371, 3.89109e-07)
bones/67/position = Vector3(-3.06109, 13.9677, 0.280022)
bones/67/rotation = Quaternion(0.334567, 0.0106141, 0.033822, 0.941705)
bones/68/position = Vector3(-7.80031e-07, 3.16249, -8.42387e-06)
bones/68/rotation = Quaternion(0.833034, 1.01267e-05, 0.0676659, 0.549068)
bones/69/position = Vector3(3.94554e-07, 3.32441, -6.65697e-07)
bones/69/rotation = Quaternion(0.521849, -6.31059e-06, 0.0423745, 0.851985)
bones/70/position = Vector3(-7.8049e-06, 3.62231, -7.92124e-08)
bones/71/position = Vector3(-5.74048, 13.133, 0.180997)
bones/71/rotation = Quaternion(0.380959, 0.060367, 0.050731, 0.921223)
bones/72/position = Vector3(5.40134e-06, 2.84911, -8.70371e-06)
bones/72/rotation = Quaternion(0.673573, -7.02257e-06, 0.0547, 0.737094)
bones/73/position = Vector3(-6.44888e-07, 2.80508, -4.13493e-06)
bones/73/rotation = Quaternion(0.859865, 1.81095e-06, 0.0698393, 0.505722)
bones/74/position = Vector3(6.35771e-06, 2.849, 2.13863e-05)
bones/75/position = Vector3(-2.12193e-06, 14.4917, 2.86729e-06)
bones/78/rotation = Quaternion(-0.144911, 0.20498, 0.944543, 0.211714)
bones/79/position = Vector3(-3.33388e-08, 29.1139, 3.99915e-06)
bones/79/rotation = Quaternion(-0.516835, 0.0391048, -0.0955759, 0.849834)
bones/80/rotation = Quaternion(0.670142, 0.160784, 0.115524, 0.715341)
bones/81/rotation = Quaternion(0.273912, 0.0416911, 0.00836868, 0.960814)
bones/83/rotation = Quaternion(0.110126, 0.279475, 0.946123, -0.120899)
bones/84/position = Vector3(-4.80362e-07, 29.1139, -3.5695e-06)
bones/84/rotation = Quaternion(-0.517956, 0.0671813, 0.00678288, 0.852738)
bones/85/rotation = Quaternion(0.66974, -0.0233095, -0.0770457, 0.73822)
bones/86/rotation = Quaternion(0.286963, -0.0438399, -0.00838198, 0.956901)

[node name="Components" type="Node3D" parent="visual"]

[node name="TakeDamageEnemy" parent="visual/Components" instance=ExtResource("3_6e6hn")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="visual/Components/TakeDamageEnemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10091, 0.0523798)
shape = SubResource("CylinderShape3D_lj8q5")

[node name="PlayerDetector" parent="visual/Components" instance=ExtResource("4_xct1x")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="visual/Components/PlayerDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24599, 0)
shape = SubResource("BoxShape3D_w5d84")

[node name="EnemyAttacker" parent="visual/Components" instance=ExtResource("5_yvppe")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="visual/Components/EnemyAttacker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.114502, 0.90378, 0.688021)
shape = SubResource("BoxShape3D_hlr2b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.991942, 0)
shape = SubResource("CapsuleShape3D_ecylj")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("2_sbgte")]
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_jq5xo")

[node name="attack" type="Node" parent="StateMachine"]
script = ExtResource("4_wq2o6")

[node name="dead" type="Node" parent="StateMachine"]
script = ExtResource("5_ief7n")

[node name="fallIdle" type="Node" parent="StateMachine"]
script = ExtResource("6_4ls7k")

[node name="landing" type="Node" parent="StateMachine"]
script = ExtResource("7_jktti")

[node name="takeDamage" type="Node" parent="StateMachine"]
script = ExtResource("8_ybyyf")

[node name="chase" type="Node" parent="StateMachine"]
script = ExtResource("13_m24yl")

[connection signal="animation_finished" from="visual/Enemy/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="enemy_take_damage" from="visual/Components/TakeDamageEnemy" to="." method="_on_take_damage_enemy_enemy_take_damage"]
[connection signal="player_detected" from="visual/Components/PlayerDetector" to="." method="_on_player_detector_player_detected"]
[connection signal="player_undetected" from="visual/Components/PlayerDetector" to="." method="_on_player_detector_player_undetected"]
[connection signal="attacking" from="visual/Components/EnemyAttacker" to="." method="_on_enemy_attacker_attacking"]

[editable path="visual/Enemy"]
